Avoid TxnProgressWidget Getting Stuck In An Infinite Loop
git-svn-id: https://svn.apache.org/repos/asf/incubator/ambari/branches/ambari-186@1344453 13f79535-47bb-0310-9956-ffa450edef68

--- a/hmc/css/common3.css
+++ b/hmc/css/common3.css
@@ -133,6 +133,13 @@ span.installationWizardStageNumber {
   color: gray;
 }
 
+.txnNoOpMsg {
+  padding: 4px;
+  font-weight: bolder;
+  font-size: 150%;
+  text-align: center;
+}
+
 .logEntry {
   border:1px solid #B2B299 ;
   background-color:#F0F0E8;
